# filelisting

./: MANIFEST.in  Makefile  README.rst  pyproject.toml
docs/: CNAME  index.html  v1.2.rst  v1.3.rst
src/filelisting/: __init__.py
src/filelisting/core/: __init__.py
src/filelisting/tests/: __init__.py  test_TestFileGeneratorAndList.py  test_TestMainCLI.py
