[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=77.0",
]

[project]
authors = [
    { email = "johannes.programming@gmail.com", name = "Johannes" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.2,<9",
    "expandpath>=1.1,<2",
    "preparse>=1.1,<2",
]
description = "This project lists files under given paths."
keywords = []
license = "MIT"
license-files = [
    "LICENSE.txt",
]
name = "filelisting"
readme = "README.rst"
requires-python = ">=3.11"
version = "1.3.2"

[project.urls]
Download = "https://pypi.org/project/filelisting/#files"
Index = "https://pypi.org/project/filelisting/"
Source = "https://github.com/johannes-programming/filelisting/"
Website = "https://filelisting.johannes-programming.online/"

[tool.mypy]
files = [
    ".",
]
python_version = "3.11"
strict = true
